[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allnewsapi"
version = "1.0.0"
description = "A Python SDK for AllNewsAPI"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name="AllNewsAPI", email="contact@allnewsapi.com" },
]
keywords = ["news", "api", "sdk", "allnewsapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [ 
    "requests~=2.25.0",
    "certifi~=2020.12.5",
]

[project.urls]
Homepage = "https://github.com/AllNewsAPI/python-sdk"
BugTracker = "https://github.com/AllNewsAPI/python-sdk/issues"
